     mountvirtfs in initscripts.  Initscripts needs to remove devpts.sh and
     mountkernfs.
   - debian/debhelper.in/libc.postinst: likewise.
   - debian/debhelper.in/libc.postrm: likewise.

   - debian/debhelper.in/libc.preinst: Fix kernel version detection correctly.
     Patched by Goswin von Brederlow <brederlo@informatik.uni-tuebingen.de>.
     (Closes: #241395).
   - debian/rules.d/debhelper.mk: Fix NOSTRIP condition.

   - debian/patches/51_glibc232-hppa-nopltrel.dpatch: Do not process
     lezy relocations if no DT_PLTREL is present.  Reported by
     Richard Hirst <rhirst@linuxcare.com> and Patched by
     Carlos O'Donell <carlos@baldric.uwo.ca>.  (Closes: #228375)
   - debian/patches/glibc232-ppc32-nanosecond.dpatch: Fix ppc32 stat
     reports bogus nanosecond data.  Patched by Anton Blanchard
     <anton@samba.org>.  (Closes: #231358)
   - debian/patches/nptl-io-locking.dpatch: Add stdio performance
     improvement for nptl.  Dpatched by Michael Clark
     <michael@metaparadigm.com>.  (Closes: #238213)
   - debian/patches/52_glibc233-hppa-feupdateenv.dpatch:
     The newest compiler in unstable has caught a bug in the feupdateenv
     implementation for hppa. The code should not be using the constant input
     argument as temporary scratch.  Patched by Carlos O'Donell
     <carlos@baldric.uwo.ca>.
   - debian/patches/localedef-fix-trampoline.dpatch: Fix localedef segv
     when run under exec-shield/PaX and so on due to trampoline issue.
     Dpatched by James Troup <james@nocrew.org>.
     (Closes: #231438, #198099, #215624, #215821, #221740)
   - debian/patches/alpha-rtsigaction-fix.dpatch: Fix alpha sigaction with
     SA_SIGINFO (rt_sigaction), keep program execution after exiting signal
     handler, with correctly calling rt_sigreturn.  (Closes: #221969)
   - debian/patches/translation-fr.dpatch: Include fr.po translation patch.
     Patched by Petter Reinholdtsen <pere@hungry.com>.  Related bug #243183
     is currently suspended.