@@ -26,7 +26,8 @@ glibc (2.3.2.ds1-12) unstable; urgency=low
    - debian/debhelper.in/libc.preinst: Fix kernel version detection correctly.
      Patched by Goswin von Brederlow <brederlo@informatik.uni-tuebingen.de>.
      (Closes: #241395).
-   - debian/rules.d/debhelper.mk: Fix NOSTRIP condition.
+
+   - debian/rules.d/debhelper.mk: Fix build failure in strip processing.
 
    - debian/patches/51_glibc232-hppa-nopltrel.dpatch: Do not process
      lezy relocations if no DT_PLTREL is present.  Reported by
